--- a/test/suites/test-workflows/artillery-workflow.yaml
+++ b/test/suites/test-workflows/artillery-workflow.yaml
@@ -11,3 +11,4 @@ spec:
       workflows:
       - name: artillery-workflow-smoke
       - name: artillery-workflow-smoke-template
+      - name: distributed-artillery-workflow-smoke-artifacts
