--- a/.github/workflows/new-build.yaml
+++ b/.github/workflows/new-build.yaml
@@ -10,7 +10,7 @@ env:
   BUSYBOX_IMAGE: busybox:1.36.1-musl
 
 permissions:
-  id-token: write # needed for keyless signing with cosign and for depot
+  id-token: write # needed for depot
 
 jobs:
   api:
@@ -21,8 +21,6 @@ jobs:
 
       - name: Set up Depot CLI
         uses: depot/setup-action@v1
-
- #     - uses: sigstore/cosign-installer@v3.7.0 #TODO: add cosign action
 
       - name: Login to DockerHub
         uses: docker/login-action@v3
@@ -90,4 +88,22 @@ jobs:
           ANALYTICS_API_KEY: ${{secrets.TESTKUBE_API_GA_MEASUREMENT_SECRET}}
           SEGMENTIO_KEY: ${{secrets.TESTKUBE_API_SEGMENTIO_KEY}}
           CLOUD_SEGMENTIO_KEY: ${{secrets.TESTKUBE_API_CLOUD_SEGMENTIO_KEY}}
+
+#  update_api_helm_charts:
+#    needs: [api]
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Get tag
+#        id: tag
+#        uses: dawidd6/action-get-tag@v1
+#        with:
+#          strip_v: false
+#
+#      - name: Repository Dispatch
+#        uses: peter-evans/repository-dispatch@v3
+#        with:
+#          token: ${{ secrets.CI_BOT_TOKEN }}
+#          repository: kubeshop/helm-charts
+#          event-type: release-testkube-api-charts
+#          client-payload: '{"RELEASE_VERSION": "${{ steps.tag.outputs.tag }}", "SERVICE": "api"}'
 
