--- a/.github/workflows/new-build.yaml
+++ b/.github/workflows/new-build.yaml
@@ -9,6 +9,9 @@ env:
   ALPINE_IMAGE: alpine:3.20.3
   BUSYBOX_IMAGE: busybox:1.36.1-musl
 
+permissions:
+  id-token: write # needed for depot
+
 jobs:
   api:
     runs-on: depot-ubuntu-22.04
