--- a/.github/workflows/new-build.yaml
+++ b/.github/workflows/new-build.yaml
@@ -5,6 +5,7 @@ on:
       - "v[0-9]+.[0-9]+.[0-9]+"
     branches:
       - main
+      - fix-new-ci-condition
 env:
   ALPINE_IMAGE: alpine:3.20.3
   BUSYBOX_IMAGE: busybox:1.36.1-musl
@@ -83,21 +84,19 @@ jobs:
           SEGMENTIO_KEY: ${{secrets.TESTKUBE_API_SEGMENTIO_KEY}}
           CLOUD_SEGMENTIO_KEY: ${{secrets.TESTKUBE_API_CLOUD_SEGMENTIO_KEY}}
 
-  update_api_helm_charts:
-    needs: [api]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get tag
-        id: tag
-        uses: dawidd6/action-get-tag@v1
-        with:
-          strip_v: false
+    - name: Check if it is a release
+      id: check-tag
+      run: |
+        if [[ ${{ github.event.ref }} =~ ^refs/tags/[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "match=true" >> $GITHUB_OUTPUT
+        fi
 
-      - name: Repository Dispatch
-        uses: peter-evans/repository-dispatch@v3
-        with:
-          token: ${{ secrets.CI_BOT_TOKEN }}
-          repository: kubeshop/helm-charts
-          event-type: release-testkube-api-charts
-          client-payload: '{"RELEASE_VERSION": "${{ steps.tag.outputs.tag }}", "SERVICE": "api"}'
+    - name: Repository Dispatch
+      if: steps.check-tag.outputs.match == 'true'
+      uses: peter-evans/repository-dispatch@v3
+      with:
+        token: ${{ secrets.CI_BOT_TOKEN }}
+        repository: kubeshop/helm-charts
+        event-type: release-testkube-api-charts
+        client-payload: '{"RELEASE_VERSION": "${{ env.DOCKER_METADATA_OUTPUT_VERSION }}", "SERVICE": "api"}'
 
