--- a/.github/workflows/new-build.yaml
+++ b/.github/workflows/new-build.yaml
@@ -86,7 +86,7 @@ jobs:
       - name: Check if it is a release
         id: check-tag
         run: |
-          if [[ ${{ github.event.ref }} =~ ^refs/tags/[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          if [[ ${{ github.event.ref }} =~ ^refs/tags/v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
               echo "match=true" >> $GITHUB_OUTPUT
           fi
 
