--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -11070,6 +11070,118 @@ components:
         nodePublishSecretRef:
           $ref: "#/components/schemas/LocalObjectReference"
 
+    ProjectedVolumeSource:
+      type: object
+      description: Represents a projected volume source
+      properties:
+        defaultMode:
+          $ref: "#/components/schemas/BoxedInteger"      
+        sources:
+          description: sources is the list of volume projections. Each entry in this list
+            handles one source.
+          items:
+            description: Projection that may be projected along with other supported volume types.
+              Exactly one of these fields must be set.
+            properties:
+              secret:
+                description: secret information about the secret data to project
+                properties:
+                  items:
+                    description: items if unspecified, each key-value pair
+                      in the Data field of the referenced ConfigMap will
+                      be projected into the volume as a file whose name
+                      is the key and content is the value. If specified,
+                      the listed keys will be projected into the specified
+                      paths, and unlisted keys will not be present. If a
+                      key is specified which is not present in the ConfigMap,
+                      the volume setup will error unless it is marked optional.
+                      Paths must be relative and may not contain the '..'
+                      path or start with '..'.
+                    items:
+                      description: Maps a string key to a path within a
+                        volume.
+                      properties:
+                        key:
+                          description: key is the key to project.
+                          type: string
+                        mode:
+                          $ref: "#/components/schemas/BoxedInteger"
+                        path:
+                          description: path is the relative path of the
+                            file to map the key to. May not be an absolute
+                            path. May not contain the path element '..'.
+                            May not start with the string '..'.
+                          type: string
+                      required:
+                        - key
+                        - path
+                      type: object
+                    type: array
+                  name:
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                                          TODO: Add other useful fields. apiVersion, kind, uid?'
+                    type: string
+                  optional:
+                    description: ptional field specify whether the Secret
+                      or its key must be defined
+                    type: boolean
+                type: object
+              downwardAPI:
+                description: downwardAPI information about the downwardAPI data to project
+                properties:
+                  items:
+                    description: Items is a list of DownwardAPIVolume file
+                    properties:
+                      fieldRef:
+                        description: 'Selects a field of the pod: only annotations, labels, name, namespace and uid are supported.'
+                        properties:
+                          apiVersion:
+                            description: Version of the schema the FieldPath
+                              is written in terms of, defaults to "v1".
+                            type: string
+                          fieldPath:
+                            description: Path of the field to select in the
+                              specified API version.
+                            type: string
+                        required:
+                          - fieldPath
+                        type: object
+                      mode:
+                        $ref: "#/components/schemas/BoxedInteger"
+                      path:
+                        description: path is the relative path of the
+                          file to map the key to. May not be an absolute
+                          path. May not contain the path element '..'.
+                          May not start with the string '..'.
+                        type: string
+                      resourceFieldRef:
+                        description: 'Selects a resource of the container: only
+                          resources limits and requests (limits.cpu, limits.memory,
+                          limits.ephemeral-storage, requests.cpu, requests.memory
+                          and requests.ephemeral-storage) are currently supported.'
+                        properties:
+                          containerName:
+                            description: 'Container name: required for volumes,
+                              optional for env vars'
+                            type: string
+                          divisor:
+                            type: string
+                            pattern: "^[0-9]+(m|[GMK]i)$"
+                          resource:
+                            description: 'Required: resource to select'
+                            type: string
+                        required:
+                          - resource
+                        type: object
+                    required:
+                      - path
+                    type: object                    
+                  type: array
+                type: object
+            type: object
+          type: array
+      type: object
+
     Volume:
       type: object
       description: Volume represents a named volume in a pod that
@@ -11101,6 +11213,8 @@ components:
           $ref: "#/components/schemas/ConfigMapVolumeSource"
         csi:
           $ref: "#/components/schemas/CSIVolumeSource"
+        projected:
+          $ref: "#/components/schemas/ProjectedVolumeSource"
       required:
         - name
 
