--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -11083,6 +11083,90 @@ components:
             description: Projection that may be projected along with other supported volume types.
               Exactly one of these fields must be set.
             properties:
+              clusterTrustBundle:
+                description: ClusterTrustBundle allows a pod to access the `.spec.trustBundle` field
+                  of ClusterTrustBundle objects in an auto-updating file.
+                properties:
+                  labelSelector:
+                    $ref: "#/components/schemas/LabelSelector"
+                  name:
+                    $ref: "#/components/schemas/BoxedString"
+                  optional:
+                    $ref: "#/components/schemas/BoxedBoolean"
+                  path:
+                    description: Relative path from the volume root to write the bundle.
+                    type: string
+                  signerName:
+                    $ref: "#/components/schemas/BoxedString"
+                required:
+                - path
+                type: object
+              configMap:
+                description: configMap information about the configMap data to project
+                properties:
+                  items:
+                    description: items if unspecified, each key-value pair
+                      in the Data field of the referenced ConfigMap will
+                      be projected into the volume as a file whose name
+                      is the key and content is the value. If specified,
+                      the listed keys will be projected into the specified
+                      paths, and unlisted keys will not be present. If a
+                      key is specified which is not present in the ConfigMap,
+                      the volume setup will error unless it is marked optional.
+                      Paths must be relative and may not contain the '..'
+                      path or start with '..'.
+                    items:
+                      description: Maps a string key to a path within a
+                        volume.
+                      properties:
+                        key:
+                          description: key is the key to project.
+                          type: string
+                        mode:
+                          $ref: "#/components/schemas/BoxedInteger"
+                        path:
+                          description: path is the relative path of the
+                            file to map the key to. May not be an absolute
+                            path. May not contain the path element '..'.
+                            May not start with the string '..'.
+                          type: string
+                      required:
+                        - key
+                        - path
+                      type: object
+                    type: array
+                  name:
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                                          TODO: Add other useful fields. apiVersion, kind, uid?'
+                    type: string
+                  optional:
+                    description: optional field specify whether the ConfigMap
+                      or its key must be defined
+                    type: boolean
+                type: object
+              downwardAPI:
+                description: downwardAPI information about the downwardAPI data to project
+                properties:
+                  items:
+                    description: Items is a list of DownwardAPIVolume file
+                    properties:
+                      fieldRef:
+                        $ref: "#/components/schemas/FieldRef"
+                      mode:
+                        $ref: "#/components/schemas/BoxedInteger"
+                      path:
+                        description: path is the relative path of the
+                          file to map the key to. May not be an absolute
+                          path. May not contain the path element '..'.
+                          May not start with the string '..'.
+                        type: string
+                      resourceFieldRef:
+                        $ref: "#/components/schemas/ResourceFieldRef"
+                    required:
+                      - path
+                    type: object
+                  type: array
+                type: object
               secret:
                 description: secret information about the secret data to project
                 properties:
@@ -11122,25 +11206,26 @@ components:
                                           TODO: Add other useful fields. apiVersion, kind, uid?'
                     type: string
                   optional:
-                    description: ptional field specify whether the Secret
+                    description: optional field specify whether the Secret
                       or its key must be defined
                     type: boolean
                 type: object
-              downwardAPI:
-                description: downwardAPI information about the downwardAPI data to project
+              serviceAccountToken:
+                description: serviceAccountToken is information about the serviceAccountToken data to project
                 properties:
-                  items:
-                    description: Items is a list of DownwardAPIVolume file
-                    properties:
-                      fieldRef:
-                        $ref: "#/components/schemas/FieldRef"
-                      resourceFieldRef:
-                        $ref: "#/components/schemas/ResourceFieldRef"
-                    required:
-                      - path
-                    type: object                    
-                  type: array
-                type: object
+                  audience:
+                    description: audience is the intended audience of the token. A recipient of a token
+                      must identify itself with an identifier specified in the audience of the 
+                      token, and otherwise should reject the token. The audience defaults to the identifier of the apiserver.
+                    type: string
+                  expirationSeconds:
+                    $ref: "#/components/schemas/BoxedInteger"
+                  path:
+                    description: path is the path relative to the mount point of the file to project the token into.
+                    type: string
+                  required:
+                    - path
+                type: object 
             type: object
           type: array
       type: object
